@@ -76,7 +76,6 @@ import net.sf.rubycollect4j.iter.TransformIterableTest;
 import net.sf.rubycollect4j.iter.TransformIteratorTest;
 import net.sf.rubycollect4j.iter.ZipIterableTest;
 import net.sf.rubycollect4j.iter.ZipIteratorTest;
-import net.sf.rubycollect4j.packer.ByteUtilTest;
 import net.sf.rubycollect4j.packer.DirectiveTest;
 import net.sf.rubycollect4j.packer.PackerTest;
 import net.sf.rubycollect4j.packer.UnpackerTest;
@@ -86,6 +85,7 @@ import net.sf.rubycollect4j.succ.DoubleSuccessorTest;
 import net.sf.rubycollect4j.succ.IntegerSuccessorTest;
 import net.sf.rubycollect4j.succ.LongSuccessorTest;
 import net.sf.rubycollect4j.succ.StringSuccessorTest;
+import net.sf.rubycollect4j.util.ByteUtilTest;
 import net.sf.rubycollect4j.util.ComparableEntryTest;
 import net.sf.rubycollect4j.util.LinkedIdentityMapTest;
 import net.sf.rubycollect4j.util.LinkedIdentityMap_EntrySetTest;
